--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
 primaryColor="#ffffff"
 backgroundColor="#ececec"
-secondaryBackgroundColor="#05668d"
+secondaryBackgroundColor="#bfc0c0"
 textColor="#000000"
